--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Timezone Converter</title>
     <link rel="icon" type="image/svg+xml" href="logo.svg">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="container">
         <header>
             <div class="logo">
-                <a href="./"><img src="logo.svg" alt="Timezone Converter" class="logo-img"></a>
+                <a href="/"><img src="logo.svg" alt="Timezone Converter" class="logo-img"></a>
             </div>
             <nav id="navigation">
                 <a href="/" class="nav-link active">Converter</a>
                 <a href="/creator.html" class="nav-link">Link Creator</a>
+                <a href="/docs.html" class="nav-link">Docs</a>
             </nav>
         </header>
 
