--- a/show.html
+++ b/show.html
@@ -124,7 +124,7 @@
                 <div class="socials" role="list" aria-label="Social links">
                     <!-- Ko-fi -->
                     <a class="social-link" role="listitem" href="https://ko-fi.com/thewildbits" target="_blank" title="Ko-fi channel" aria-label="Ko-fi">
-                        <img src="media/twb/Ko-fi.svg" alt="Ko-fi" width="24" height="24">
+                        <img src="media/twb/ko-fi.svg" alt="Ko-fi" width="24" height="24">
                     </a>
 
                     <!-- YouTube -->
