correct show links

--- a/show.html
+++ b/show.html
@@ -97,13 +97,13 @@
                     </a>
 
                     <!-- Spotify -->
-                    <a class="app-link" role="listitem" href="https://open.spotify.com/show/6h4Qkq1L1s9H2mKUj447gg" target="_blank" title="Spotify" aria-label="Spotify">
+                    <a class="app-link" role="listitem" href="https://open.spotify.com/show/2GJof19NuiOV5RYATX5pQV" target="_blank" title="Spotify" aria-label="Spotify">
                         <img src="media/twb/podcasts-spotify.svg" alt="Spotify" width="24" height="24">
                         <span class="label">Spotify</span>
                     </a>
 
                     <!-- Deezer -->
-                    <a class="app-link" role="listitem" href="https://www.deezer.com/en/show/1312814452" target="_blank" title="Deezer" aria-label="Deezer">
+                    <a class="app-link" role="listitem" href="https://deezer.com/show/1002035561" target="_blank" title="Deezer" aria-label="Deezer">
                         <img src="media/twb/podcasts-deezer.svg" alt="Deezer" width="24" height="24">
                         <span class="label">Deezer</span>
                     </a>
@@ -115,7 +115,7 @@
                     </a>
 
                     <!-- YouTube Music -->
-                    <a class="app-link" role="listitem" href="https://music.youtube.com/playlist?list=PL3_26jJp6gP8FZkQ4DjU9BqN_2QeWQ1qK" target="_blank" title="YouTube Music" aria-label="YouTube Music">
+                    <a class="app-link" role="listitem" href="https://music.youtube.com/playlist?list=PL7P-i-Q5_VukYcba664yuabh7ALTKaw-d" target="_blank" title="YouTube Music" aria-label="YouTube Music">
                         <img src="media/twb/podcasts-youtube_music.svg" alt="YouTube Music" width="24" height="24">
                         <span class="label">YouTube Music</span>
                     </a>
@@ -123,12 +123,12 @@
 
                 <div class="socials" role="list" aria-label="Social links">
                     <!-- Ko-fi -->
-                    <a class="social-link" role="listitem" href="https://ko-fi.com/thewildbits" target="_blank" title="Ko-fi channel" aria-label="Ko-fi">
+                    <a class="social-link" role="listitem" href="https://ko-fi.com/thewildbits" target="_blank" title="Ko-fi" aria-label="Ko-fi">
                         <img src="media/twb/ko-fi.svg" alt="Ko-fi" width="24" height="24">
                     </a>
 
                     <!-- YouTube -->
-                    <a class="social-link" role="listitem" href="https://www.youtube.com/@thewildbits" target="_blank" title="YouTube channel" aria-label="YouTube">
+                    <a class="social-link" role="listitem" href="https://www.youtube.com/@thewildbits" target="_blank" title="YouTube" aria-label="YouTube">
                         <img src="media/twb/social-youtube.svg" alt="YouTube" width="24" height="24">
                     </a>
 
